<resources>
    <string name="app_name"><large>AFRL/RHDR Trial Survey App</large></string>
    <string name="btnRunProtocol">Run Protocol</string>
    <string name="btnNewProtocol">New Protocol</string>
    <string name="btnEditProtocol">Edit Protocol</string>
    <string name="btnSettings">Settings</string>
    <string name="btnListProtocols">List Protocols</string>
    <string name="btnBackupdb">Copy Database to Downloads Folder</string>
    <string name="btnSave">Save</string>
    <string name="btnClose">Close</string>
    <string name="title_activity_display_new_protocol">Add New Protocol</string>
    <string name="title_activity_display_edit_protocol">Edit Protocol Settings</string>
    <string name="title_display_protocols">Protocol List</string>
    <string name="title_Settings">Settings</string>
    <string name="title_MainMenu">Trial Survey App</string>
    <string name="hint_new_protocol">Enter New Protocol ID</string>
    <string name="hint_new_numSubjects">Enter Number of Subjects</string>
    <string name="hint_new_numShotcodes">Enter Number of Shotcodes</string>
    <string name="hint_new_Question">Enter New Question</string>
    <string name="hint_new_minText">Enter New Text at Min</string>
    <string name="hint_new_maxText">Enter New Text at Max</string>
    <string name="hint_protocol">Protocol ID</string>
    <string name="hint_numSubjects">Number of Subjects</string>
    <string name="hint_numShotcodes">Number of Shotcodes</string>
    <string name="hint_Question">Question</string>
    <string name="hint_minText">Text at Min</string>
    <string name="hint_maxText">Text at Max</string>
    <string name="ProtocolID">Protocol ID:</string>
    <string name="Subjects"># Subjects:</string>
    <string name="Shotcodes"># Shotcodes:</string>
    <string name="Question">Survey Question:</string>
    <string name="minText">Min Text:</string>
    <string name="maxText">Max Text:</string>
    <string name="action_settings">Settings</string>
    <string name="logo">AFRL_Logo</string>
    <string name="title_activity_run_protoco1">Run Protoco1 Activity</string>
    <string name="title_activity_run_trial">Run Trial Activity</string>
    <string name="txtQ1"> Rate the Pain from the Last Trial</string>
    <string name="txtQ1low">No Pain</string>
    <string name="txtQ1high">Most Pain Ever Felt</string>
    <string name="txtQ2"> Ready for Another Trial?</string>
    <string name="txtQ2low">No</string>
    <string name="txtQ2high">Ready</string>
    <string name="btnRunTrial">Run Trial</string>
    <string name="pmtProtocol">Select Protocol</string>
    <string name="pmtSubject">Select Subject</string>
    <string name="pmtShotcode">Select Shotcode</string>

    <string-array name="protocol_list">
        <item>Protocol 01</item>
    </string-array>
    <string-array name="subject_list">
        <item>Subject 01</item>
        <item>Subject 02</item>
        <item>Subject 03</item>
        <item>Subject 04</item>
        <item>Subject 05</item>
        <item>Subject 06</item>
        <item>Subject 07</item>
        <item>Subject 08</item>
        <item>Subject 09</item>
        <item>Subject 10</item>
        <item>Subject 11</item>
        <item>Subject 12</item>
        <item>Subject 13</item>
        <item>Subject 14</item>
        <item>Subject 15</item>
        <item>Subject 16</item>
        <item>Subject 17</item>
        <item>Subject 18</item>
        <item>Subject 19</item>
        <item>Subject 20</item>
        <item>Subject 21</item>
        <item>Subject 22</item>
        <item>Subject 23</item>
    </string-array>

    <string-array name="shotcode_list">
        <item>Shotcode 01</item>
        <item>Shotcode 02</item>
        <item>Shotcode 03</item>
        <item>Shotcode 04</item>
        <item>Shotcode 05</item>
        <item>Shotcode 06</item>
        <item>Shotcode 07</item>
        <item>Shotcode 08</item>
        <item>Shotcode 09</item>
        <item>Shotcode 10</item>
        <item>Shotcode 11</item>
        <item>Shotcode 12</item>
        <item>Shotcode 13</item>
        <item>Shotcode 14</item>
        <item>Shotcode 15</item>
        <item>Shotcode 16</item>
        <item>Shotcode 17</item>
        <item>Shotcode 18</item>
        <item>Shotcode 19</item>
        <item>Shotcode 20</item>
        <item>Shotcode 21</item>
        <item>Shotcode 22</item>
        <item>Shotcode 23</item>
        <item>Shotcode 24</item>
        <item>Shotcode 25</item>
        <item>Shotcode 26</item>
        <item>Shotcode 27</item>
        <item>Shotcode 28</item>
        <item>Shotcode 29</item>
        <item>Shotcode 30</item>
        <item>Shotcode 31</item>
        <item>Shotcode 32</item>
        <item>Shotcode 33</item>
        <item>Shotcode 34</item>
        <item>Shotcode 35</item>
        <item>Shotcode 36</item>
        <item>Shotcode 37</item>
        <item>Shotcode 38</item>
        <item>Shotcode 39</item>
        <item>Shotcode 40</item>
        <item>Shotcode 41</item>
        <item>Shotcode 42</item>
    </string-array>


</resources>
