<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="rhdr.afrl.trialsurvey.DisplayNewProtocolActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_display_new_protocol"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ProtocolID"
        android:id="@+id/textViewProtocolID"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentStart="false"
        android:layout_alignBaseline="@+id/txtProtocolID"
        android:layout_alignParentEnd="false"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtProtocolID"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:hint="@string/hint_new_protocol"
        android:textSize="20sp"
        android:enabled="true"
        android:editable="true"
        android:layout_toRightOf="@+id/textViewProtocolID"
        android:layout_below="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/intNumSubjects"
        android:layout_below="@+id/txtProtocolID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:editable="true"
        android:enabled="true"
        android:textSize="20sp"
        android:hint="@string/hint_new_numSubjects"
        android:layout_toRightOf="@+id/textViewSubjects" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/intNumShotcode"
        android:layout_below="@+id/intNumSubjects"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:enabled="true"
        android:textSize="20sp"
        android:hint="@string/hint_new_numShotcodes"
        android:editable="true"
        android:layout_toRightOf="@+id/textViewShotcode" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/btnSave"
        android:textSize="20sp"
        android:enabled="true"
        android:textAlignment="center"
        android:height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable = "true"
        android:onClick="SavebtnClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Subjects"
        android:id="@+id/textViewSubjects"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/intNumSubjects"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Shotcodes"
        android:id="@+id/textViewShotcode"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/intNumShotcode"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Question"
        android:id="@+id/textViewQuestion"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/txtQuestion" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtQuestion"
        android:inputType="text"
        android:hint="@string/hint_new_Question"
        android:textSize="20sp"
        android:enabled="true"
        android:editable="true"
        android:layout_toRightOf="@+id/textViewQuestion"
        android:layout_below="@+id/intNumShotcode"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/minText"
        android:id="@+id/textViewMin"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:layout_alignParentStart="false"
        android:layout_alignBaseline="@+id/txtMin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtMin"
        android:inputType="text"
        android:hint="@string/hint_new_minText"
        android:textSize="20sp"
        android:enabled="true"
        android:editable="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/textViewMin"
        android:layout_below="@+id/txtQuestion" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/maxText"
        android:id="@+id/textViewMax"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/txtMax" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtMax"
        android:inputType="text"
        android:hint="@string/hint_new_maxText"
        android:textSize="20sp"
        android:enabled="true"
        android:editable="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/txtMin"
        android:layout_toRightOf="@+id/textViewMax" />

</RelativeLayout>
