<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="7dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="rhdr.afrl.trialsurvey.RunTrialActivity"
        tools:showIn="@layout/activity_run_trial">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </include>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtQ1"
            android:id="@+id/txtQuestion1"
            android:layout_below="@+id/tool_bar"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:textSize="30sp" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_below="@+id/txtQuestion1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:max="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtQ1low"
            android:id="@+id/txtQ1low"
            android:layout_alignParentStart="false"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_below="@+id/seekBar"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtQ1high"
            android:id="@+id/txtQ1high"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@+id/txtQ1low"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtQ2"
            android:id="@+id/txtQuestion2"
            android:layout_below="@+id/txtQ1low"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:textSize="30sp" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar2"
            android:layout_below="@+id/txtQuestion2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:max="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtQ2low"
            android:id="@+id/txtQ2low"
            android:layout_alignParentStart="false"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_below="@+id/seekBar2"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtQ2high"
            android:id="@+id/txtQ2high"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@+id/txtQ2low"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:id="@+id/btnRunTrial"
            android:textSize="40sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:onClick="SaveTrial"/>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
