<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".SettingsActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </include>

     <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNewProtocol"
        android:id="@+id/btnNewProtocol"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:enabled="true"
        android:textAlignment="center"
        android:height="40dp"
        android:onClick="showNewProto"
        android:layout_below="@+id/tool_bar"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEditProtocol"
        android:id="@+id/btnEditProtocol"
        android:layout_below="@+id/btnNewProtocol"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:enabled="true"
        android:textAlignment="center"
        android:height="40dp"
        android:onClick="showEditProto"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnListProtocols"
        android:id="@+id/btnListProtocol"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:enabled="true"
        android:textAlignment="center"
        android:height="40dp"
        android:onClick="showListProto"
        android:layout_below="@+id/btnEditProtocol"
        android:layout_centerHorizontal="true"
        android:nestedScrollingEnabled="true" />


</RelativeLayout>
