<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="7dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="rhdr.afrl.trialsurvey.RunTrialActivity"
        tools:showIn="@layout/activity_run_trial">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </include>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtQ1"
            android:id="@+id/txtQuestion1"
            android:layout_below="@+id/tool_bar"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_below="@+id/txtQuestion1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:max="1"
            android:layout_toEndOf="@id/txtQ1low"
            android:layout_toStartOf="@id/txtQ1high" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtQ1low"
            android:id="@+id/txtQ1low"
            android:layout_below="@+id/txtQuestion1"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtQ1high"
            android:id="@+id/txtQ1high"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@+id/txtQ1low" />

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
