<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="7dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".RunProtocolActivity"
        tools:showIn="@layout/activity_run_protoco1">


        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </include>

        <Spinner
            android:id="@+id/spnrProtocolID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tool_bar"
            android:layout_marginTop="50dp"
            android:background="@color/button_material_light"
            android:clickable="true"
            android:spinnerMode="dropdown"
            android:prompt="@string/pmtProtocol" />

        <Spinner
            android:id="@+id/spnrSubjectID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spnrProtocolID"
            android:layout_marginTop="100dp"
            android:background="@color/button_material_light"
            android:clickable="true"
            android:spinnerMode="dropdown"
            android:prompt="@string/pmtSubject" />

        <Spinner
            android:id="@+id/spnrShotCodeID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/spnrSubjectID"
            android:layout_marginTop="100dp"
            android:background="@color/button_material_light"
            android:clickable="true"
            android:spinnerMode="dropdown"
            android:prompt="@string/pmtShotcode" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRunTrial"
            android:id="@+id/btnRunTrial"
            android:textSize="40sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:onClick="showRunTrial"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pmtProtocol"
            android:id="@+id/txtProtocol"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/tool_bar"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pmtSubject"
            android:id="@+id/txtSubject"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/spnrProtocolID"
            android:layout_marginTop="60dp"
            android:textSize="25sp"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pmtShotcode"
            android:id="@+id/txtShotcode"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/spnrSubjectID"
            android:layout_marginTop="60dp"
            android:textSize="25sp"
            android:textColor="#000000" />

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
